# t22-smart-baby-nursery

./: MQTTBroker.py  README.md
Fan/: fan.py  simple_fan_control.py
baby-monitor/: raspicam.service
ble-test/ble-server/: ble-server.ino
ble-test/led-w-ble/: led-w-ble.ino
configuration-files/: configuration.yaml
configuration-files/blueprints/automation/: fan-control.yaml  sound-detection-crib.yaml  sound-detection-fan.yaml  sound-detection-led.yaml  sound-detection.yaml
led/: led.ino
led/mqtt-test/: led-receiver.py  led.py
led/mqtt-test/led-mqtt/: led-mqtt.ino
mg995-motor/: mg995-motor.ino
scapy/: sample.py  sender.py
sg90-motor-crib/: sg90-motor-crib.ino
sg90-motor-curtain/: sg90-motor-curtain.ino
sound-detection/: hello.service  sound-detection.py
temp-sensor/: CMakeLists.txt  dht_example.c  temp-sensor.ino
